<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/login_bk"
    android:orientation="vertical"

    tools:context=".RegisterActivity">

    <TextView
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="130dp"
        android:layout_marginStart="10dp"
        android:text="Registration Page"
        android:textColor="#5A11ED"
        android:textStyle="bold"
        android:textSize="30sp"/>
    <View
        android:layout_width="225dp"
        android:layout_height="5dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="5dp"
        android:background="#40DD07" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:layout_marginLeft="10dp"
            android:text="@string/tv_name"
            android:textSize="25sp"
            android:textStyle="bold"
            android:textColor="#4C0BCF"/>
        <EditText
            android:id="@+id/et_name"
            android:layout_width="280dp"
            android:layout_height="65dp"
            android:layout_marginTop="25dp"
            android:layout_marginLeft="10dp"
            android:inputType="text"
            android:textStyle="bold"
            android:textSize="25sp"
            android:textColor="#DD0449"
            android:hint="@string/et_name_hint"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="10dp"
            android:text="@string/tv_mail"
            android:textSize="25sp"
            android:textStyle="bold"
            android:textColor="#4C0BCF"/>
        <EditText
            android:id="@+id/et_mail"
            android:inputType="textEmailAddress"
            android:layout_width="280dp"
            android:layout_height="65dp"
            android:layout_marginTop="5dp"
            android:layout_marginLeft="10dp"
            android:textStyle="bold"
            android:textSize="25sp"
            android:textColor="#DD0449"
            android:hint="@string/et_mail_hint"/>
    </LinearLayout>
            <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginLeft="10dp"
                android:text="@string/tv_regd"
                android:textSize="25sp"
                android:textStyle="bold"
                android:textColor="#4C0BCF"/>
            <EditText
                android:id="@+id/et_regd"
                android:layout_width="280dp"
                android:layout_height="65dp"
                android:inputType="number"
                android:layout_marginTop="5dp"
                android:layout_marginLeft="10dp"
                android:textStyle="bold"
                android:textSize="25sp"
                android:textColor="#DD0449"
                android:hint="@string/et_regd_hint"/>
            </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="10dp"
            android:text="Password"
            android:textSize="25sp"
            android:textStyle="bold"
            android:textColor="#4C0BCF"/>
        <EditText
            android:id="@+id/et_password"
            android:inputType="textEmailAddress"
            android:layout_width="280dp"
            android:layout_height="65dp"
            android:layout_marginTop="5dp"
            android:layout_marginLeft="10dp"
            android:textStyle="bold"
            android:textSize="25sp"
            android:textColor="#DD0449"
            android:hint="Enter Your Password"/>
    </LinearLayout>
    <Button
        android:id="@+id/btn_submit"
        android:layout_width="200dp"
        android:layout_height="60dp"
        android:layout_marginStart="180dp"
        android:layout_marginTop="40dp"
        android:background="@drawable/centre_button"
        android:text="Register"
        android:textColor="#ffffff"
        android:textSize="25sp" />
    </LinearLayout>
