<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/login_bk"
    android:orientation="vertical"

    tools:context=".RegisterActivity">
    <androidx.appcompat.widget.Toolbar
        android:id="@+id/tl_end"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="?attr/actionBarSize"
        android:background="#A307CC" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginStart="15dp"
        android:text="@string/tv_hey"
        android:textColor="#5A11ED"
        android:textStyle="bold"
        android:textSize="30sp"/>
    <TextView
        android:id="@+id/tv_first_name"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:layout_marginStart="20dp"
        android:textColor="#5A11ED"
        android:textStyle="bold"
        android:textSize="30sp"/>
    <TextView
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="35dp"
        android:layout_marginStart="15dp"
        android:text="@string/tv_your_details"
        android:textColor="#5A11ED"
        android:textStyle="bold"
        android:textSize="35sp"/>
    <View
        android:layout_width="210dp"
        android:layout_height="5dp"
        android:layout_marginStart="15dp"
        android:layout_marginTop="5dp"
        android:background="#40DD07" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:layout_marginLeft="10dp"
            android:text="@string/tv_your_name"
            android:textSize="25sp"
            android:textStyle="bold"
            android:textColor="#4C0BCF"/>
        <TextView
            android:id="@+id/tv_name"
            android:layout_width="240dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:layout_marginLeft="10dp"
            android:textSize="20sp"
            android:textStyle="bold"
            android:textColor="#DD0449"
            />

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="10dp"
            android:text="@string/tv_your_regd"
            android:textSize="25sp"
            android:textStyle="bold"
            android:textColor="#4C0BCF"/>
        <TextView
            android:id="@+id/tv_regd"
            android:layout_width="245dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="10dp"
            android:textSize="20sp"
            android:textStyle="bold"
            android:textColor="#DD0449"
            />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:layout_marginLeft="10dp"
            android:text="@string/tv_your_mail"
            android:textSize="25sp"
            android:textStyle="bold"
            android:textColor="#4C0BCF"/>
        <TextView
            android:id="@+id/tv_mail"
            android:layout_width="230dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:layout_marginLeft="10dp"
            android:textSize="20sp"
            android:textStyle="bold"
            android:textColor="#DD0449"
            />
    </LinearLayout>
    <ImageView
        android:layout_width="250dp"
        android:layout_height="200dp"
        android:src="@drawable/images"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="10dp"
        android:layout_gravity="end"/>
    <Button
        android:id="@+id/btn_logout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="LOG OUT"
        android:textStyle="bold"
        android:textSize="20sp"
        android:background="@drawable/bg_rectangle"
        android:textColor="#122ED5"
        android:layout_marginLeft="250dp"
        android:layout_marginTop="10dp"/>
</LinearLayout>
